@@ -31,6 +31,7 @@ Library
   Network.Email.Sendmail,
     Data.CSV,
   System.Cmd.Utils,
+  Data.BinPacking,
   Data.Progress.Tracker,
   Data.Progress.Meter,
   Data.Quantity,
