@@ -1,6 +1,7 @@
 missingh (1.0.1.0) unstable; urgency=low
 
   * Now add support for parseNum to Data.Quantity.
+  * Add Data.BinPacking module.
 
  -- John Goerzen <jgoerzen@complete.org>  Tue, 15 Apr 2008 00:34:07 -0500
 
